--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -60,6 +60,39 @@
     color: white;
 }
 
+/* About */
+
+.aboutSection{
+    min-height: 100vh;
+    max-height: 100%;
+    padding: 20px;
+    background-color: white;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    margin-bottom: 100vh;
+
+}
+
+#about{
+    background-color: rgba(255, 0, 0, 0.541);
+    color: white;
+    padding: 30px;
+  }
+  #self2{
+    width: 80%;
+    height: 80%;
+    object-fit: cover;
+    display: block;
+    max-width: 100%;
+    padding-top:15px ;
+}
+#brief-Para{
+    background-color: rgb(226, 68, 68);
+    padding: 20px;
+    padding-bottom: 50px;
+}
+
    /* Media Queries */
   
 
