--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -1,17 +1,34 @@
 /* fonts */
 
-/* Amatic SC */
-@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
-/* Chewy */
-@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Chewy&display=swap');
-/* Ubuntu Sans Mono */
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap');
+/* Monsterrat */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap');
+/* font-family: "Montserrat", sans-serif; */
+
+/* Antic Didone */
+@import url('https://fonts.googleapis.com/css2?family=Antic+Didone&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap');
+/* font-family: "Antic Didone", serif; */
+
+/* Oranienbaum */
+@import url('https://fonts.googleapis.com/css2?family=Antic+Didone&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oranienbaum&family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap');
+/*  font-family: "Oranienbaum", serif;*/
+
+/* Chatura */
+@import url('https://fonts.googleapis.com/css2?family=Chathura:wght@100;300;400;700;800&display=swap');
+
+/* font-family: "Chathura", sans-serif; */
+
+
 /* structure */
 
 :root{
-    --light-pink : #FFCCCC;
-    --pale-green: #98FB98;
-    --pale-green-opaque: #98fb98da;
+    --pale-pink: #FBC7CD;
+    --nav-bar-black: #000000;
+    /* Linear gradient */
+    --linear-peach-pink: #FDE8E9;
+    --linear-white: #FFFEFA;
+    --button-pink: #FFC0CB;
+
+
 
 }
 
@@ -27,32 +44,31 @@
 
 
 .Wrapper{
-    background-image: url('https://chany4.github.io/images.Portfolio/images/Desktop%20-%2020.png');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     min-height: 100vh;
     object-fit: contain;
-    background-color: white;
-    margin: 0;
+    background-color: var(--pale-pink);
+    margin: 1px;
     padding: 0;
     overflow-x: hidden;
     max-width: 100vw;
-    min-height: 100vh;
     max-height: 100%;
+    border-bottom: 9px solid black;;
+
 }
 
 
   nav{
     background-color: var(--light-pink);
     z-index: 2;
+    font-family: "Chathura", sans-serif;background-color: var(--nav-bar-black);
+    font-size: larger;
+    
   }
   
-  .nav-link {
-    color: ghostwhite;
-    font-weight: bold;
-  }  
 .section{
     min-height: 100vh;
     max-height: 100%;
@@ -107,14 +123,14 @@ body, html{
     font-size: 1.2rem;
  }
   #p{
-    font-family: "Ubuntu Sans Mono", monospace;
+    font-family: "Chathura", sans-serif;
+    font-size: 2rem;
     font-optical-sizing: auto;
     font-style: normal;
     font-weight: bold;
     color: black;
   }
   li {
-    font-family: "Ubuntu Sans Mono", monospace;
   font-optical-sizing: auto;
   font-weight: bold;
   font-style: normal;
@@ -173,7 +189,7 @@ body, html{
 
 /* Resume Section */
 .space-resume{
-    background-image: linear-gradient(135deg,#ff8db7, #ffb7d2, #dfbbc7, #d193b4, #dfbbc7,#fdb3da, #ffb7d2, #ff8db7);
+   background-image: linear-gradient(#FDE8E9, #FFFEFA );
 
 }
 #resume{
