--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -51,12 +51,12 @@
     min-height: 100vh;
     object-fit: contain;
     background-color: var(--pale-pink);
-    margin: 1px;
+    margin: 0.5px;
     padding: 0;
     overflow-x: hidden;
     max-width: 100vw;
     max-height: 100%;
-    border-bottom: 9px solid black;;
+    border: 2px solid black;
 
 }
 
@@ -64,8 +64,8 @@
   nav{
     background-color: var(--light-pink);
     z-index: 2;
-    font-family: "Chathura", sans-serif;background-color: var(--nav-bar-black);
-    font-size: larger;
+    font-family: "Chathura", sans-serif;
+    background-color: var(--nav-bar-black);
     
   }
   
@@ -77,6 +77,7 @@
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
+    border-bottom: 2px solid black;
 }
 .space{
     margin-bottom: 33vh;
@@ -92,6 +93,7 @@ body, html{
 }
   #logo{
     color: white;
+    font-size: 5rem;
   }
 
   footer{
@@ -135,6 +137,7 @@ body, html{
   font-weight: bold;
   font-style: normal;
   color: black;
+  font-size: 1.9rem;
   }
 
   modal-dialog{
@@ -151,9 +154,6 @@ body, html{
 
 /* About */
 
-.about{
-    background-color: var(--pale-green-opaque);
-}
 
 #aboutSection{
     min-height: 100vh;
@@ -163,6 +163,7 @@ body, html{
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
+    background-image: linear-gradient(#FFC0CB,#FFFEFA , #FFC0CB);
 
 }
 
@@ -174,6 +175,14 @@ body, html{
     color: white;
     padding: 30px;
   }
+
+#aboutMeLabel{
+  color: black;
+  font-family: "Chathura", sans-serif; 
+  font-size: 9rem;
+  top: 0;
+
+}
   #self2{
     width: 80%;
     height: 80%;
@@ -185,29 +194,32 @@ body, html{
 #brief-Para{
     padding: 20px;
     padding-bottom: 50px;
+    color: black;
+    font-family: "Chathura", sans-serif;
+    font-size: 1.9rem;
 }
 
 /* Resume Section */
-.space-resume{
-   background-image: linear-gradient(#FDE8E9, #FFFEFA );
 
-}
-#resume{
-    padding: 4%;
-    max-width: max-content;
-}  
+/* #resume{
+    background-image: linear-gradient(#FFC0CB,#FFFEFA , #FFC0CB);
+}   */
 #self3 {
-    width: 90%;
-    height: 97%;
+    width: 50%;
+    height: 40%;
     object-fit: cover;
     display: block;
     max-width: 100%;
     padding-top:15px ;
+    border-radius: 25px;
+    border: 2px solid black;
+    padding: 0;
+    object-position: center;
 }
 
 /* Projects */
 .space-projects{
-    background-color: #ff46ac8e;
+    background-color:var(--linear-peach-pink)
 }
 
 /* Testiomonial Section */
@@ -239,15 +251,7 @@ body, html{
     font-style: normal
   
   }
-  #contact-section{
-    display: flex;
-    justify-content: center;
-  }
-  #contact{
-    margin: auto;
-    width: 700px;
-    padding: 30px;
-  }
+ 
   label{
     width: 92%;
   }
